fixed spacing issue on status message

--- a/css/style.css
+++ b/css/style.css
@@ -709,7 +709,7 @@ input:-webkit-autofill {
    color: #F6F6F6;
    font-family: 'Inter', sans-serif;
    text-align: center;
-   margin-bottom: 30px;
+   margin-top: 30px;
 }
 
 /* FOOTER =================================== */
